Modificaciones del index para el git

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body> 
     <div id="contenedorIndex"> <!-- contenedor padre del GRID-->
 
+<!-- cambio para ver en el git hub-->
+
 <!-- Comienzo Header: menu + Login Delegados --> 
     <header> 
         <nav>
