--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
     </header>
         <!-- Final Linea superior, menu + Login Delegados en Bootstrap--> 
     <div class="fondeando col-12 container-fluid text-center">
-          <img src="img/Logo.png">
+      <img class="animacion" src="img/Logo.png">
 </div>
 
 <section id="formulario">
